--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "mongodb": "^4.1.0",
     "next": "11.1.0",
